--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "ant-design-vue": "^2.1.6",
+    "axios": "^0.19.0",
     "ol": "^5.3.3",
     "pinia": "^2.0.13",
+    "request": "^2.88.2",
     "vee-validate": "^4.5.11",
     "vue": "^3.2.33",
     "vue-router": "^4.0.14",
